[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "netbox-branch-guard"
dynamic = ["version"]

description = "Guards against writes to the main branch and enforces branch usage"
authors = [{ name = "KPTheProf" }]
license = { file = "LICENSE" }
readme = { file = "README.md", content-type = "text/markdown" }

requires-python = ">=3.8"

dependencies = [
    "django>=4.2",
]

keywords = ["netbox", "django", "plugin", "branching", "middleware"]


[project.urls]
Homepage = "https://github.com/KPTheProf/netbox_branch_guard"
Source = "https://github.com/KPTheProf/netbox_branch_guard"


# This activates setuptools-scm
[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"


# Automatically find packages
[tool.setuptools.packages.find]
include = ["netbox_branch_guard*"]


# Include non-Python files (if needed)
[tool.setuptools.package-data]
"netbox_branch_guard" = ["templates/**/*", "static/**/*"]


# Optional: include files from MANIFEST.in if you add one later
[tool.setuptools]
include-package-data = true


# Optional uv config (helps with consistency, not required)
[tool.uv]
# Ensures reproducible builds (optional but nice)
managed = true


# Optional dependency groups (for development)
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

