[project]
name = "netbox-branch-guard"
dynamic = ["version"]
description = "Guards against writes to the main branch and enforces branch usage"
authors = [
	{name = "KPTheProf"},
]
license = "Apache-2.0"
license-files = ["LICENSE"]
readme = "README.md"
keywords = [
	"netbox",
	"django",
	"plugin",
	"branching",
	"middleware"
]
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Framework :: Django",
	"Natural Language :: English",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3 :: Only",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
	"Intended Audience :: System Administrators",
]
dependencies = [
	"django>=4.2",
]
requires-python = ">=3.12"


[project.urls]
Homepage = "https://github.com/KPTheProf/netbox_branch_guard"
# Documentation = "https://github.com/KPTheProf/netbox_branch_guard/blob/main/docs/using_netbox_branch_guard.md"
Repository = "https://github.com/KPTheProf/netbox_branch_guard"
Issues = "https://github.com/KPTheProf/netbox_branch_guard/issues"


[build-system]
requires = ["setuptools>=68", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"


# Optional: include files from MANIFEST.in if you add one later
[tool.setuptools]
packages = [
	"netbox_branch_guard",
]
package-data = { "netbox_branch_guard" = ["**/*", "templates/**/*", "static/**/*"] }
exclude-package-data = { "netbox_branch_guard" = ["tests/**/*"] }


[tool.setuptools_scm]
write_to = "netbox_branch_guard/_version.py"


# Optional uv config (helps with consistency, not required)
[tool.uv]
# Ensures reproducible builds (optional but nice)
managed = true


# Optional dependency groups (for development)
[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

