[metadata]
name = netbox-branch-guard
description = Guards against writes to the Main branch and enforces branch usage
author = KPTheProf
url = https://github.com/KPTheProf/netbox_branch_guard
license = Apache-2.0

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    django>=4.2

